--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     compile 'com.android.support:support-v4:23.3.0'
     compile 'com.android.support:cardview-v7:23.3.0'
     compile 'de.hdodenhof:circleimageview:2.0.0'
+    compile 'com.github.markushi:circlebutton:1.1'
 }
