--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.3.0'
     compile 'de.hdodenhof:circleimageview:2.0.0'
     compile 'com.github.markushi:circlebutton:1.1'
+    compile 'info.hoang8f:android-segmented:1.0.6'
 }
