--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,6 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:2.0.0'
     compile 'com.github.markushi:circlebutton:1.1'
     compile 'info.hoang8f:android-segmented:1.0.6'
+    compile files('libs/pinyin4j-2.5.0.jar')
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
